# gamlss-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
gamlss/: __init__.py  engine.py  family.py  formula.py  links.py  methods.py  model.py  rqres.py
gamlss/data/: __init__.py  abdom.csv  aids.csv  fabric.csv  rent.csv  species.csv  usair.csv
r-scripts/: fetch_r_sources.sh  gen_reference.R
tests/: cases.py  test_api.py  test_dpqr.py  test_fits.py
tests/reference/: dpqr.json  fits.json
tests/reference/data/: sim_bb.csv  sim_be.csv  sim_beo.csv  sim_bi.csv  sim_geom.csv  sim_gg.csv  sim_jsu.csv  sim_nbi.csv  sim_nbii.csv  sim_pig.csv  sim_shasho.csv  sim_zabi.csv  sim_zanbi.csv  sim_zibi.csv  sim_zinbi.csv  sim_zip.csv  sim_zip2.csv  weights_int.csv
