[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gamlss"
version = "0.1.0"
description = "Python port of the R gamlss package: Generalised Additive Models for Location Scale and Shape"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [{ name = "gamlss-python contributors" }]
keywords = ["gamlss", "statistics", "regression", "distributions", "GAM"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "patsy>=0.5.3",
]

[project.urls]
Homepage = "https://github.com/fzhao70/gamlss-python"
Issues = "https://github.com/fzhao70/gamlss-python/issues"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["gamlss*"]

[tool.setuptools.package-data]
"gamlss.data" = ["*.csv"]
